# crowdsec-service-api-sdk-python

./: CHANGELOG.md  LICENSE  README.md  openapi.json  pyproject.toml
.github/workflows/: release.yml
crowdsec_service_api/: __init__.py  base_model.py  http_client.py  models.py
crowdsec_service_api/services/: blocklists.py  hub.py  info.py  integrations.py
doc/: Blocklists.md  Hub.md  Info.md  Integrations.md  Models.md  README.md
